Small fixes to intro, labels for approach and eval

--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -1,4 +1,5 @@
 \section{CrashSimulator Approach }
+\label{sec:approach}
     %%% This figure is definitely wrong. Will recreate %%%
     \begin{figure}[t]
         \center{}
