--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -1,5 +1,5 @@
 \section{Evaluation}
-
+\label{sec:evaluation}
 % One thing to think about in terms of presentation: In several places the
 % wording sounds like we're changing (configuring) CrashSimulator to deal
 % with this or that anomaly. I think it might be clearer to think of
