--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -217,8 +217,8 @@ application's execution are hard to predict.  In many cases a denial of
 service condition occurs in the form of the application ``hanging'' as it
 attempts to incorrectly process the file.  This may happen harmlessly (such
 as the case where an application blocks forever waiting for a {\tt read()}
-call to retrieve non-existant data from an empty FIFO, or harmfully, as
-happens in the case where an attempts to read in and process an
+call to retrieve non-existant data from an empty FIFO) or harmfully, as
+happens in the case where an application attempts to read in and process an
 ``infinitely large'' file eventually filling available memory or disk
 space~\cite{Cappos_CCS_08}. \cappos{Please label the bugs w/ the impact.} 
 
@@ -226,7 +226,7 @@ space~\cite{Cappos_CCS_08}. \cappos{Please label the bugs w/ the impact.}
 the results though, such as which bug does what...}
 
 An interesting behavior we recognized when analyzing these results can be seen
-in the last three applications \phyllis{Is this correct?} listed in Table~\ref{table:unexpectedtypes}.  Each of these
+in the last two applications listed in Table~\ref{table:unexpectedtypes}.  Each of these
 applications correctly recognized when any filetype other than its expected
 filetype was encountered.  This is because these applications are simply ``dumb'' wrappers
 around the system calls they share a name with.  Essentially, they just hand
@@ -393,11 +393,10 @@ repeatable, principled manner.
 Having seen that CrashSimulator can detect many bugs with fairly 
 simple anomaly injections and checks,
 we wanted to understand whether CrashSimulator can identify more complex types
-of misbehavior that crosses many system calls.  To do this, we examined the
-way in which applications move a file.  In some cases this can be done via the {\tt
-rename()} system call, but moving files is far more complex in
-many cases.  For example, the file must be copied if moved across file
-systems, which adds additional complexity that libraries and applications
+of misbehavior that crosses many system calls.
+To do this, we examined the
+way in which applications move a file in terms of the filesystem anomaly discussed in
+section~\ref{subsec:anomalyexamples}.  This situation adds additional complexity that libraries and applications
 frequently get wrong~\cite{PHPRenameBug,PythonShutilBug,NodejsCopyBug}.
 %To come up with the
 %instructions for how to simulate the anomaly, we examined the system 
@@ -460,6 +459,7 @@ type, such as a character device.
 To test whether applications are robust to anomalies involving source file replacement,
 we developed a checker that monitors whether a series of safety checks
 are performed and applied it to traces that simulated a cross-device move.
+Failing to perform these checks often results in corruption of the file~\cite{PythonShutilBug}.
 
 \paragraph{Preserve Xattrs}
 
@@ -468,7 +468,9 @@ operating systems to store descriptive information about a file that cannot be
 held by normal filesystem fields.  For example, an operating system can use
 extended file attributes to store whether or not a file was downloaded from the
 Internet -- important security information that used to warn
-users if they are about to open a potentially unsafe file.  
+users if they are about to open a potentially unsafe file.  Apple's Gatekeeper
+relies on extended file attributes to preventa pplications downloaded from
+untrusted developers from being executed without explicit user action~\cite{AppleCodeSigning}.
 When copying a file,
 an application should retrieve extended file attributes from the source
 file and later apply them to the destination file.
@@ -504,15 +506,22 @@ the appropriate timestamps to the destination file as part of moving a file
 across devices by monitoring for a system call from the {\tt stat()} family to
 retrieve the timestamps and system call from the {\tt utime()} family to apply
 the retrieved timestamps to the destination file.
+Failure to preserve timestamps has obvious
+implications in records-keeping and archival situations as well as any situation
+where a chronological record of file maniuplations is important.  This can 
+cause odd behavior in Makefiles, archival programs, and similar
+software~\cite{NautilusTimestamps, SudoTimestamp}.
 
 \paragraph{Copying Devices}
 
-It is also important to check if a move would attempt to copy a
-special character file like {\tt /dev/urandom} across disks.  As was discussed
-in the previous section, many applications fail to examine the nature of a file
-before operating on it.  So the file must be moved by creating a new device
-of the same type at the destination, instead of reading from a potentially 
-infinite device.
+It is also important to check if a move would attempt to copy a special
+character file like {\tt /dev/urandom} across disks.  As was discussed in the
+previous section, many applications fail to examine the nature of a file before
+operating on it.  So the file must be moved by creating a new device of the same
+type at the destination, instead of reading from a potentially infinite device.
+In our experience, applications that fail to perform this check end up can
+completely filling a disk or exhausting available memory -- sometimes causing the
+system to become unresponsive.
 
 %Table~\ref{table:crossdevice} lists the result of our analysis of several 
 %popular applications and libraries that `move' files within a filesystem.  The
@@ -554,32 +563,7 @@ As can be seen from the results in Table~\ref{table:crossdevice}, each of the
 applications tested fails to perform one or more of the steps required to
 successfully complete a cross-device move.  This is an unfortunate situation
 because a failure to perform any one of these steps can result in negative
-outcomes for the system as a whole.  If the ``Source Replaced'' step isn't
-performed, it often results in corruption of the file~\cite{PythonShutilBug}.
-%
-\phyllis{I think these paragraphs about why it's important to deal with all
-of these issues should be merged into the corresponding paragraphs 
-a, b, c, d, above.}
-
-Failure to preserve timestamps has obvious
-implications in records-keeping and archival situations as well as any situation
-where a chronological record of file maniuplations is important.  This can 
-cause odd behavior in Makefiles, archival programs, and similar
-software~\cite{NautilusTimestamps, SudoTimestamp}.
-%
-It is more important to ``Preserve Xattrs''.  Real world systems rely on the
-information contained in extended file attributes to reason about the safety
-around a given file, so a failure to preserve these can result in a
-security flaw.  For example, Apple's Gatekeeper relies on extended file
-attributes to prevent applications downloaded untrusted developers from being
-executed without explicit user action~\cite{AppleCodesigning}.
-
-
-
-The most dramatic failures we saw happened when an application failed to 
-perform the ``Copying Devices'' checks.  Applications that blindly copied 
-from an infinite character device filled either disk or memory, sometimes
-causing the system to become unresponsive.
+outcomes for the system as a whole.
 
 Our results indicate that CrashSimulator is able to identify whether complex
 operations are performed correctly in anomolous situations in
@@ -654,7 +638,7 @@ approach allows these situations to be easily corrected once identified.
 For example, consider GNOME's {\tt glib} file handling facilties.  When an
 application makes use of these facilities to move a file across storage devices
 the library itself correctly handles the behaviors described above as
-making up a "correct" file move operation.  When we used CrashSimulator 
+making up a ``correct'' file move operation.  When we used CrashSimulator 
 with the checkers described above to
 analyze a minimal application that used {\tt glib} for a cross-device move,
 we got erroneous reports stating that the application {\em did not} respond
