Add ref to intro

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -164,7 +164,7 @@ In the remainder of this paper we desribe CrashSimulator's operation more genera
 Manipulation and replay of traces (section~\ref{sec:approach}),
 Models for checking behavior in simulated environment (section~\ref{sec:approach})
 Evaluation (section~\ref{sec:evaluation})
-Related work is discussed in section~\preston{reference here}
+Related work is discussed in section~\ref{sec:relatedwork}.
 
 		This work makes the following contributions:
 
