Reword question, removed uneeded paragraph from conclusion

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -36,7 +36,8 @@ Using this prototype, we answer the following questions about CrashSimulator:
 
 \begin{enumerate}
    \item{[\ref{sec-env-bugs}] Do environmental bugs exist in widely used applications?}
-   \item{[\ref{sec-complex}] Can CrashSimulator identify complex anomalies?}
+   \item{[\ref{sec-complex}] Can CrashSimulator identify anomalies that require
+       complex checkers?}
    \item{[\ref{sec-not-found}] What types of bugs could not be found using CrashSimulator?}
    \item{[\ref{sec-sorts-errors}] What sorts of errors does CrashSimulator make?}
    \item{[\ref{sec-perf}] Is CrashSimulator able to execute tests in a performant manner?}
@@ -383,7 +384,7 @@ repeatable, principled manner.
 %is because the operating system kernel handles error handling for those
 %calls instead of the application
 
-\subsection{Can CrashSimulator identify complex anomalies?}
+\subsection{Anomalies That Require Complex Checkers}
 \label{sec-complex}
 \phyllis{Re-word this question?}
 
