--- a/bibdata.bib
+++ b/bibdata.bib
@@ -230,8 +230,191 @@
 
 @String{pub-IEEE-STD:adr        = "New York, NY, USA"}
 
+@inproceedings{DBLP:conf/icse/PradelJAG12,
+  author    = {Michael Pradel and
+               Ciera Jaspan and
+               Jonathan Aldrich and
+               Thomas R. Gross},
+  title     = {Statically checking {API} protocol conformance with mined multi-object
+               specifications},
+  booktitle = {34th International Conference on Software Engineering, {ICSE} 2012,
+               June 2-9, 2012, Zurich, Switzerland},
+  pages     = {925--935},
+  year      = {2012},
+  publisher = {{IEEE} Computer Society},
+  url       = {http://dx.doi.org/10.1109/ICSE.2012.6227127},
+  doi       = {10.1109/ICSE.2012.6227127},
+  timestamp = {Fri, 23 Dec 2016 17:00:12 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icse/PradelJAG12},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icse/JamrozikSZ16,
+  author    = {Konrad Jamrozik and
+               Philipp von Styp{-}Rekowsky and
+               Andreas Zeller},
+  title     = {Mining sandboxes},
+  booktitle = {ICSE} 2016},
+  publisher = {{ACM}},
+  pages     = {37--48},
+  year      = {2016},
+  url       = {http://doi.acm.org/10.1145/2884781.2884782},
+  doi       = {10.1145/2884781.2884782},
+  timestamp = {Sun, 30 Apr 2017 09:41:43 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icse/JamrozikSZ16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sigsoft/XuanXM15,
+  author    = {Jifeng Xuan and
+               Xiaoyuan Xie and
+               Martin Monperrus},
+  title     = {Crash reproduction via test case mutation: let existing test cases
+               help},
+  booktitle = {{ESEC/FSE} 2015},
+  pages     = {910--913},
+  year      = {2015},
+  publisher = {{ACM}},
+  url       = {http://doi.acm.org/10.1145/2786805.2803206},
+  doi       = {10.1145/2786805.2803206},
+  timestamp = {Thu, 10 Sep 2015 16:05:11 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/sigsoft/XuanXM15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icst/DallmeierP0MZ14,
+  author    = {Valentin Dallmeier and
+               Bernd Pohl and
+               Martin Burger and
+               Michael Mirold and
+               Andreas Zeller},
+  title     = {WebMate: Web Application Test Generation in the Real World},
+  booktitle = {{ICST} 2014 Workshops Proceedings},
+  publisher = {{IEEE} Computer Society},
+  pages     = {413--418},
+  year      = {2014},
+  url       = {http://dx.doi.org/10.1109/ICSTW.2014.65},
+  doi       = {10.1109/ICSTW.2014.65},
+  timestamp = {Mon, 11 May 2015 16:37:25 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icst/DallmeierP0MZ14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{Hofmeyr:1998:IDU:1298081.1298084,
+ author = {Hofmeyr, Steven A. and Forrest, Stephanie and Somayaji, Anil},
+ title = {Intrusion Detection Using Sequences of System Calls},
+ journal = {J. Comput. Secur.},
+ issue_date = {August 1998},
+ volume = {6},
+ number = {3},
+ month = aug,
+ year = {1998},
+ issn = {0926-227X},
+ pages = {151--180},
+ numpages = {30},
+ url = {http://dl.acm.org/citation.cfm?id=1298081.1298084},
+ acmid = {1298084},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+} 
+
+@inproceedings{Acharya:2000:MUP:1251306.1251307,
+ author = {Acharya, Anurag and Raje, Mandar},
+ title = {{MAPbox}: Using Parameterized Behavior Classes to Confine Untrusted Applications},
+ booktitle = {USENIX Security Symposium},
+ year = {2000},
+ location = {Denver, Colorado},
+ pages = {1--1},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=1251306.1251307},
+ acmid = {1251307},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+@article{DBLP:journals/tosem/MonperrusM13,
+  author    = {Martin Monperrus and
+               Mira Mezini},
+  title     = {Detecting missing method calls as violations of the majority rule},
+  journal   = {{ACM} Trans. Softw. Eng. Methodol.},
+  volume    = {22},
+  number    = {1},
+  pages     = {7:1--7:25},
+  year      = {2013},
+  url       = {http://doi.acm.org/10.1145/2430536.2430541},
+  doi       = {10.1145/2430536.2430541},
+  timestamp = {Tue, 03 Jan 2017 15:18:20 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/tosem/MonperrusM13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 
+
+@article{DBLP:journals/ase/WasylkowskiZ11,
+  author    = {Andrzej Wasylkowski and
+               Andreas Zeller},
+  title     = {Mining temporal specifications from object usage},
+  journal   = {Autom. Softw. Eng.},
+  volume    = {18},
+  number    = {3-4},
+  pages     = {263--292},
+  year      = {2011},
+  url       = {http://dx.doi.org/10.1007/s10515-011-0084-1},
+  doi       = {10.1007/s10515-011-0084-1},
+  timestamp = {Tue, 12 Jul 2011 12:57:02 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/ase/WasylkowskiZ11},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/oopsla/HovemeyerP04,
+  author    = {David Hovemeyer and
+               William Pugh},
+  title     = {Finding bugs is easy},
+  booktitle = {{OOPSLA} 2004},
+  pages     = {132--136},
+  year      = {2004},
+  publisher = {{ACM}},
+  url       = {http://doi.acm.org/10.1145/1028664.1028717},
+  doi       = {10.1145/1028664.1028717},
+  timestamp = {Mon, 13 Feb 2006 15:35:58 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/oopsla/HovemeyerP04},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sigsoft/LalQ14,
+  author    = {Akash Lal and
+               Shaz Qadeer},
+  title     = {Powering the static driver verifier using {CORRAL}},
+  booktitle = {{SIGSOFT FSE} 2014},
+  pages     = {202--212},
+  year      = {2014},
+  publisher = {{ACM}},
+  url       = {http://doi.acm.org/10.1145/2635868.2635894},
+  doi       = {10.1145/2635868.2635894},
+  timestamp = {Fri, 07 Nov 2014 13:02:02 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/sigsoft/LalQ14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/tse/FuMRW05,
+  author    = {Chen Fu and
+               Ana Milanova and
+               Barbara G. Ryder and
+               David Wonnacott},
+  title     = {Robustness Testing of Java Server Applications},
+  journal   = {{IEEE} Trans. Software Eng.},
+  volume    = {31},
+  number    = {4},
+  pages     = {292--311},
+  year      = {2005},
+  url       = {http://dx.doi.org/10.1109/TSE.2005.51},
+  doi       = {10.1109/TSE.2005.51},
+  timestamp = {Thu, 10 Dec 2015 11:33:17 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/tse/FuMRW05},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 
 @InProceedings{Alexander_SIGCOMM_1997,
