--- a/CSRelatedWork.tex
+++ b/CSRelatedWork.tex
@@ -1,8 +1,9 @@
 \section{Related Work} \label{sec:related}
 
+\iffalse
 While there is a vast literature on test
 generation~\cite{ammann2008introduction, mcminn2004search,
-  puasuareanu2009survey, dias2007survey}, relatively little prior work
+  puasuareanu2009survey, dias2007survey}, much less work
 has focused on issues of portability and testing whether software
 behaves consistently in different environments.  Prior work on
 CheckAPI~\cite{rasley2015detecting} and
@@ -14,121 +15,128 @@ builds upon those results.
 %NetCheck; CheckAPI; stub injection; detecting machine specific bugs
 %(e.g. numeric/memory limitations); testing error handlers; \dots
 
+
+Crash reproduction by test case mutation~\cite{DBLP:conf/sigsoft/XuanXM15}.
+
+\fi
+
+
 \noindent
 {\bf Static analysis. }
-The Explode system uses model checking to check properties 
-of file systems~\cite{Yang:2006:ELG:1298455.1298469}.
-MC enables writing checkers that are compiled into
-static checks for violations of system rules and security 
-properties~\cite{Engler:2000:CSR:1251229.1251230, Ashcraft02usingprogrammer-written}.
-SLAM~\cite{Ball_adecade, Ball:2002:SLP:503272.503274} 
-uses model checking to check if an implementation
-conforms to rules characterizing correct API usage;
-it has been very successful in finding bugs
-in Windows device drivers.
-%By contrast, verification techniques like CheckAPI
-%typically scale better and are less prone to false-positives,
-%but they provide less strong guarantees of correctness.
-Static analysis can integrate static API call verification into an API
-implementation~\cite{spinellis2007framework}. This requires formally specifying each API call, whereas
-a PSI specifies API behavior with a direct implementation. Silakov et
-al.~\cite{silakov2010improving} statically detect portability problems
-in Linux applications, while the Java API Compliance
-Checker~\cite{javacompliance-www}
-checks binary- and source-level compatibility of an application against
-a Java library API. 
-%These tools check static properties, while CheckAPI
-%validates an API's runtime behavior.
-Like CrashSimulator, these address the application's
-interactions with the operating system and environment,
-but the proposed work focuses on testing the application's
-response to anomalies, rather than on proving that the
-environments behave as expected.
+Tools based on static analysis techniques such as abstract
+interpretation, model checking, and symbolic execution have been used
+successfully to detect bugs related to incorrect API usages. Examples
+include SLAM~\cite{Ball_adecade, Ball:2002:SLP:503272.503274} and,
+more recently, CORRAL~\cite{DBLP:conf/sigsoft/LalQ14} for conformance
+checking of Windows device drivers against the Windows kernel API,
+FindBugs~\cite{DBLP:conf/oopsla/HovemeyerP04} for detecting API usage
+bugs in Java programs, FiSC~\cite{Musuvathi04modelchecking} for
+finding bugs in TCP implemenations, and the Explode
+system~\cite{Yang:2006:ELG:1298455.1298469} for detecting crash
+recovery bugs in file system implementations. Unlike CrashSimulator,
+these approaches depend on the availability of source or byte code and
+are typically more prone to false alarms. On the other hand, static
+analysis can provide stronger soundness guarantees.  Static analysis
+has also been used to detect portability issues related to changes
+between different versions of external components that a program
+depends on~\cite{silakov2010improving, javacompliance-www}. Like
+CrashSimulator, these address the application's interactions with its
+environment, but this work focuses on testing the application's
+response to anomalies, rather than on proving that the environments
+behave as expected.
+
+\iffalse
+\noindent
+{\bf Specification and run-time verification.}  Substantial work has
+been done in validating API and protocol behaviors, e.g., finding
+faults in the Linux TCP implementation,
+SSH2 and RCP~\cite{Udrea:2008}, BGP
+configuration~\cite{Feamster:2005}, and identifying network
+vulnerabilities~\cite{ritchey-sp00}. 
+\fi
+
+\noindent
+{\bf API protocol mining.}
+There has been extensive work on mining source code to learn API
+protocols and use them to detect common usage violations such as
+missing method calls (see, e.g.,~\cite{mariani2007compatibility,
+  DBLP:journals/ase/WasylkowskiZ11, DBLP:conf/icse/PradelJAG12,
+  DBLP:journals/tosem/MonperrusM13,
+  DBLP:conf/icse/JamrozikSZ16}). These techniques primarily target
+object component interactions rather than system calls to generate
+test suites. However, the techniques explored in these works could be
+used to mine system call patterns in source code in order to learn
+checkers that identify incorrect responses to environment
+anomalies. So far, we have specified these checkers manually for
+CrashSimulator.
+
+\noindent {\bf Tracing and log mining.}  
+Similar to API protocol mining, there has been substantive work on
+using log files to detect anomalies~\cite{pinpoint,
+  jiang_abnormal_trace_detection_icac_2005, xu2009detecting,
+  lou2010mining2} and aid program understanding~\cite{yuan2010sherlog,
+  beschastnikh_synoptic_fse_2011, csight_icse_2014}.
+%In contrast to
+%this work, our focus is on diagnosing network issues from logs
+%of syscalls, though prior work on log mining can be used to
+%expand our scope.
+Khadke et al.~\cite{khadketransparent} introduced a performance
+debugging approach that relies on system call tracing. Unlike this
+prior work, our system does not assume synchronized clocks and
+reconstructs a plausible global ordering.
+CheckAPI~\cite{rasley2015detecting} and
+NetCheck~\cite{Zhuang_NSDI_2014} use system call traces to diagnose an
+application's violations of cross-platform portability that are
+observed in the field. In contrast to this work, CrashSimulator uses
+system call traces for a different purpose: mutating and replaying
+traces to test an applications' responses to known environmental
+anomalies before the application is deployed.
+
 
 \noindent
 {\bf Portability.}
-System call interposition can monitor executions of binaries to automatically
-assemble packages of code needed to run applications on other
-platforms~\cite{Guo:2011:CUS:2002181.2002202}.
+Wrappers are commonly used to enable cross-platform portability of
+APIs~\cite{bartolomeicompliance}. System call interposition is one
+technique to generate such wrappers
+automatically~\cite{Guo:2011:CUS:2002181.2002202} and has also been
+used to detect and prevent security
+violations~\cite{Hofmeyr:1998:IDU:1298081.1298084,
+  Acharya:2000:MUP:1251306.1251307}.  CrashSimulator's goals are
+complementary as it exploits environment anomalies discovered in
+testing or analyzing one application to generate and execute tests for
+another application.
 %
-Inferred behavioral models of
-software component interactions can automatically generate compatibility test
-suites~\cite{mariani2007compatibility}. Compliance-validated wrappers can be
-used for principled migration of APIs across
-platforms~\cite{bartolomeicompliance}.
-In C, feature test macros can explicitly specify compatibility
-with a specific OS.
-These approaches are complementary to 
-%CheckAPI,
-CrashSimulator
-whose goal is to 
-%detect portability issues so that they can be fixed.
-exploit anomalies discovered in testing or analyzing one
-application to generate and execute tests for another application.
-%
-Skoll addresses portability bugs arising from configuration problems by
-sampling the configuration space using distributed and diverse
-machines~\cite{skoll:icse:2004}. Skoll, together with combinatorial
-techniques, can systematically discover combinations of configuration options
-(selected from a large but well-defined space) that cause a given test suite
-to fail~\cite{Yilmaz:issta:2004, Fouche:issta:2009}. 
-Recently, several tools have addressed the issue of cross-browser
-incompatibilities for web applications~\cite{DBLP:conf/icse/Choudhary11,
-DBLP:conf/icsm/ChoudharyVO10,
-Mesbah:2011:ACC:1985793.1985870,silakov2010improving}.
-%These involve computer vision algorithms to detect differences
-%in page rendering, along with dynamic web crawling. Choudhary et
-%al.~\cite{silakov2010improving}
-% additionally compare web applications'
-%possible states across browsers.
-%Cross-browser
-Incompatibilities detected by
-these techniques can arise from differences in JavaScript
-interpreters, along with other root causes.
-%Integrating CheckAPI for JavaScript into such tools could
-%improve their accuracy and help in fault diagnosis.
-CrashSimulator helps developers to test 
-whether applications deal with  such incompatibilities robustly.
+Other works that target complementary classes of portability problems
+include the detection of configuration-related
+bugs~\cite{skoll:icse:2004, Yilmaz:issta:2004, Fouche:issta:2009,
+  Kastner12, Nguyen14} and
+cross-browser incompatibilities for web
+applications~\cite{DBLP:conf/icsm/ChoudharyVO10, silakov2010improving,
+  DBLP:conf/icse/Choudhary11, Mesbah:2011:ACC:1985793.1985870,
+  DBLP:conf/icst/DallmeierP0MZ14}.
+
 
 \noindent
-{\bf POSIX conformance testing.}
-The Ballista system generates parameter values for POSIX functions aimed at
-detecting implementation problems. In fifteen popular OS implementations,
-Ballista revealed many bugs through crashes and abnormal task
-termination~\cite{Koopman00theexception}.
-%By contrast, CheckAPI detects violations that are the result of more
-%subtle differences in OS behavior.
+{\bf Testing exception handling and conformance.}
+A few researchers have developed testing techniques aimed at checking
+whether programs respond appropriately to anomalous situations.  For
+example, Fu et al. introduce data flow testing techniques that require
+tests that cover paths from points at which exceptions are thrown to
+points at which they are handled in Java code, in order to test
+whether programs respond correctly to exceptional situations that the
+programmer has anticipated~\cite{DBLP:journals/tse/FuMRW05}.  Koopman
+and DeVale developed a system to detect bugs in error handling code
+related to calls to POSIX functions~\cite{Koopman00theexception}.
 %
-Model-based test and oracle
-generation~\cite{Pretschner:2005:MT:1062455.1062636, JVCS07} can aid
-conformance, and has been applied to POSIX file
-systems~\cite{Dadeau:2008:CSM:1433121.1433137} and to other POSIX
-aspects~\cite{Farchi02}.
-%This work generates tests to validate library
-%behavior and is complementary to CheckAPI, which finds violations at run-time.
-Executing test suites across multiple configurations of a product or system,
-known as variability execution~\cite{Nguyen14, Kastner12}, may reveal
-differences between the configurations.
-%By contrast, CheckAPI focuses on
-%executing multiple implementations that share no or little code.
-Such testing techniques can help identify
+Other approaches to conformance checking of POSIX operations use model
+based testing~\cite{Dadeau:2008:CSM:1433121.1433137,Farchi02}.
+%
+Unlike these approaches, CrashSimulator does not exclusively
+target error handling code or anomalies that only involve individual
+system calls. However, such testing techniques can help identify
 anomalies that can be added to our repository.
 
-%\noindent
-%{\bf Reliability via redundancy:}
-%Developing and running multiple implementations of an application in
-%parallel, comparing them at checkpoints, can achieve high reliability
-%under the assumption that the implementations fail
-%independently~\cite{DBLP:journals/tse/KnightL86}. Such reliability can
-%be made optimal, in terms of the number of necessary
-%implementations~\cite{Brun11icdcs}.
-%CheckAPI's use of a PSI differs because a PSI represents an idealized execution 
-%of the system, avoiding OS behavior to the greatest extent possible. For 
-%example, the file system metadata in a CheckAPI PSI is likely to be entirely
-%in memory. Thus, while n-version testing would have all implementations 
-%heavily dependent on the same underlying OS behavior, a PSI is independent
-%of the OS implementation and can discover violations caused by the OS. 
-%
+
 %\noindent
 %{\bf Runtime verification:}
 %Runtime verification (RV) 
@@ -174,81 +182,7 @@ anomalies that can be added to our repository.
 %systems and could help improve CheckAPI-MT performance.
 
 
-%\noindent
-%{\bf Blackbox diagnosis.}  Aguilera et al.\ introduced an important
-%blackbox approach to debugging distributed
-%systems~\cite{aguilera-sosp03}. In this approach,
-%observations of a distributed executions are used to infer causality,
-%dependencies, and other characteristics of the system. This approach
-%was relaxed in later work to produce more informative and
-%application-specific results in Magpie~\cite{magpie}
-%and X-Trace~\cite{fonseca2007x}. 
-%This prior work focuses on tracking request flows through a distributed
-%system. BorderPatrol~\cite{koskinen_borderpatrol_eurosys_2008} is another
-%approach that traces requests among binary modules.
-%In contrast, ours is a blackbox approach to diagnosing
-%network issues in applications.
-%
-%
-%
-%\noindent
-%{\bf Ordering events in a distributed setting.}
-%The happens-before relation logically
-%orders events in a distributed
-%system~\cite{lamport_clocks_cacm_1978}. This relation can be realized
-%with vector time, which produces a partial ordering of events in the
-%system~\cite{fidge_vector_clocks_1988,
-%  mattern_vector_clocks_1989}. Vector time requires non-trivial
-%instrumentation of the application. We will reconstruct a
-%plausible order of the captured syscalls through heuristics, without
-%modifying the application.
-%
-%Globally synchronized clocks can order events across
-%hosts. However, over 90\% of syscall invocations we observed completed
-%in less than 0.1~ms. Achieving synchronization at a granularity that
-%is sufficient to order syscalls at hosts on a LAN is expensive and
-%difficult. 
-
-\noindent
-{\bf Tracing and Log mining.}  Prior work that uses dynamically captured logs
-of a program's execution is extensive and includes work on detecting
-anomalies~\cite{pinpoint, jiang_abnormal_trace_detection_icac_2005,
-  xu2009detecting, lou2010mining2}, linking logs and source
-code~\cite{yuan2010sherlog}, identifying performance
-bugs~\cite{sambasivan_req_flow_nsdi_2011, perf_skeletons_ipdps_2008},
-and generating models to support system
-understanding~\cite{beschastnikh_synoptic_fse_2011, csight_icse_2014}.
-%In contrast to
-%this work, our focus is on diagnosing network issues from logs
-%of syscalls, though prior work on log mining can be used to
-%expand our scope.
-Khadke et al.~\cite{khadketransparent} introduced a performance
-debugging approach that relies on system call tracing. Unlike this
-prior work, our proposed system does not assume synchronized clocks and
-reconstructs a plausible global ordering.
-In contrast to this work, CrashSimulator uses system call traces
-for a different purpose: mutating and replaying traces to test
-applications' responses to environmental anomalies.
-
-%\noindent
-%{\bf  Debugging distributed systems.} Techniques for debugging
-%distributed systems are relevant to our proposed tool.
-%Many tools exist for run-time checking
-%of distributed systems. These tools monitor a system's execution and
-%check for specific property violations~\cite{reynolds2006pip,
-%  geels_friday_nsdi_2007, liu_d3s_nsdi_2008, yabandeh2009crystalball, 
-%  dao_live_dist_sys_debugging_cc_2009}. Ours is a more
-%light-weight approach to diagnose issue observed through the
-%syscall interface. 
-
-\noindent
-{\bf Specification and run-time verification.}  Substantial work has
-been done in validating API and protocol behaviors, e.g., finding
-faults in Linux TCP implementation~\cite{Musuvathi04modelchecking},
-SSH2 and RCP~\cite{Udrea:2008}, BGP
-configuration~\cite{Feamster:2005}, and identifying network
-vulnerabilities~\cite{ritchey-sp00}. 
-
+\iffalse
 \noindent
 {\bf Application-specific fault detection.}
 Pip~\cite{reynolds2006pip} and
@@ -264,7 +198,7 @@ a rule base of allowed state transition paths.
 CrashSimulator leverages NetCheck's approach to simulate identified
 anomalies in network behavior, file system behavior, etc. to test
 applications other than the ones on which the anomalies were originally discovered.
-
+\fi
 
 
 %% The following is old stuff -- not sure how much should be integrated
